EVAL.sh.1061921.out
  File "/data/group1/z40351r/VoiceActivityProjection/vap/evaluation.py", line 45
    default=None
           ^
SyntaxError: invalid syntax
